--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew-digit-code = { path = "../yew-digit-code", features = [
-    "unicode-segmentation",
-] }
+yew-digit-code = { git = "https://github.com/heureka-code/yew-digit-code" }
 log = "0.4.12"
 yew = { version = "0.21.0", features = ["csr"] }
 dotenv = "0.15"
