--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         rustup target add wasm32-unknown-unknown
     - uses: actions/checkout@v4
+    - uses: actions/cache@v3
       with:
         path: |
           ~/.cargo/bin
@@ -35,7 +36,6 @@ jobs:
           ~/.cargo/registry
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-    - uses: Swatinem/rust-cache@v2
     - name: Install Trunk
       uses: jetli/trunk-action@v0.4.0
       with:
