--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -37,7 +37,9 @@ jobs:
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Install Trunk
-      run: cargo install --locked trunk
+      uses: jetli/trunk-action@v0.4.0
+      with:
+        version: "latest"
     - name: Run tests
       run: cargo test --verbose
     - name: Build
